[package]
name = "axum-server"
version = "0.1.0"
edition = "2021"

[dependencies]
kizuna = { path = "../../" }
axum = "0.6.16"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0.96"
tracing = "0.1.37"
tracing-subscriber = "0.3.16"
tokio = { version = "1.27.0", features = ["full"] }
async-trait = "0.1.68"
anyhow = "1.0.70"
sqlx = { version = "0.6.3", features = [
    "postgres",
    "runtime-tokio-native-tls",
    "macros",
], optional = true }
axum-macros = "0.3.7"

[features]
memory = []
postgres = ["sqlx"]